--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -5,62 +5,50 @@
 {% block content %}
   <br>
   <div class="container">
-    <div class="d-none d-sm-none d-md-block"> <!--Avatar & name for md and up-->
-      <h3>
-        <img class="rounded-circle mb-1"
-             src="{{ member.get_avatar }}"
-             style="width: 3em; height:3em; object-fit: cover;"><br>
-        {{ member.short_name }}
-      </h3>
-      <h5 class="text-muted">{{ member.get_role_display }}</h5>
-    </div>
-    <div class="d-block d-sm-block d-md-none text-center"> <!--Avatar & name for sm and down-->
-      <h3>
-        <img class="rounded-circle mb-1"
-             src="{{ member.get_avatar }}"
-             style="width: 3em; height:3em; object-fit: cover;"><br>
-        {{ member.short_name }}
-      </h3>
-      <h5 class="text-muted">{{ member.get_role_display }}</h5>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-12 col-md-5 col-lg-4">
-        <h5>Hours</h5>
-        <br>
-        <div class="row text-center">
-          <div class="col">
-            <h6>Total</h6>
-            {{ hr_total }}
-          </div>
-          <div class="col">
-            <h6>Build</h6>
-            {{ hr_build }}
-          </div>
-          <div class="col">
-            <h6>Outreach</h6>
-            {{ hr_out }}
-          </div>
-        </div>
-        <div class="d-block d-sm-block d-md-none">
-            <hr>
-        </div>
-      </div>
-      <div class="col-12 offset-md-1 col-md-4 offset-lg-2 col-lg-4">
-        <h5>Attendance</h5>
-        <h6 class="text-muted">{{ meetings|length }}/{{ total_meetings }} Build Meetings (
-          {% if attendance_percent >= 30 %}
-            <span class="text-success"><b>{{ attendance_percent }}%</b></span>
-          {% else %}
-            <span>{{ attendance_percent }}%</span>
+    <div class="row justify-content-center">
+      <div class="col-sm-12 col-md-6">
+        <div class="text-center">
+          <h3 class="mb-0">
+            <img class="rounded-circle mb-1"
+                 src="{{ member.get_avatar }}"
+                 style="width: 3em; height:3em; object-fit: cover;"><br>
+            {{ member.short_name }}
+          </h3>
+          {% if member.subtitle %}
+            <h5 class="text-muted">{{ member.subtitle }}</h5>
           {% endif %}
-          of hours )
-        </h6>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-12">
+            <h4>Hours: {{ hr_total }}</h4>
+            <div class="pl-4">
+              <h6><b>Build:</b> {{ hr_build }}</h6>
+              <h6><b>Outreach:</b> {{ hr_out }}</h6>
+            </div>
+            <div class="">
+              <hr>
+            </div>
+          </div>
+          <div class="col-12">
+            <h4>Attendance</h4>
+            <div class="pl-4">
+              <h6 class="text-muted">{{ meetings|length }}/{{ total_meetings }} Build Meetings (
+                {% if attendance_percent >= 30 %}
+                  <span class="text-success"><b>{{ attendance_percent }}%</b></span>
+                {% else %}
+                  <span>{{ attendance_percent }}%</span>
+                {% endif %}
+                of hours )
+              </h6>
 
-        {% for meeting in meetings %}
-          <a href="{% url "teammanager:meeting" id=meeting.id %}">{{ meeting.date }}</a><br>
-        {% endfor %}
+              {% for meeting in meetings %}
+                <a href="{% url "teammanager:meeting" id=meeting.id %}">{{ meeting.date }}</a><br>
+              {% endfor %}
 
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
