Make all faces clickable

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -33,6 +33,10 @@
       height: 2em;
       object-fit: cover;
     }
+
+    a {
+      color: #000;
+    }
   </style>
   {% block script %}{% endblock %}
   {% block style %}{% endblock %}
