--- a/teammanager/templates/teammanager/directory.html
+++ b/teammanager/templates/teammanager/directory.html
@@ -20,9 +20,11 @@
       <div class="row justify-content-center">
         {% for position in section.positions %}
           <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
-            <img class="head rounded-circle mb-3" src="{{ position.member.get_avatar }}">
-            <h5>{{ position.member }}</h5>
-            <p class="small text-muted mb-0">{{ position.name }}</p>
+            <a href="{% url 'man:member' id=position.member.id %}">
+              <img class="head rounded-circle mb-3" src="{{ position.member.get_avatar }}">
+              <h5>{{ position.member }}</h5>
+              <p class="small text-muted mb-0">{{ position.name }}</p>
+            </a>
           </div>
 
           <!-- Stagger rows --->
@@ -30,7 +32,7 @@
             <div class="w-100 d-none d-xl-block"></div>{% endif %}
 
         {% endfor %}
-        </div>
+      </div>
     {% endfor %}
   </div>
 {% endblock %}
