--- a/teammanager/templates/teammanager/families.html
+++ b/teammanager/templates/teammanager/families.html
@@ -19,7 +19,7 @@
       <h2 class="mt-4 mb-4 text-center">{{ family }}</h2>
       <div class="row justify-content-center mb-1">
         {% for member in family.member_set.all %}
-          <div class="col-sm-12 col-md-4 col-xl-2 mb-4 justify-content-center text-center">
+          <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
             <a href="{% url 'man:member' id=member.id %}">
               <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
               <h5>{{ member }}</h5>
@@ -33,10 +33,10 @@
       </div>
       <hr class="my-1">
     {% endfor %}
-    <h2 class="mt-4 mb-4 text-center">Everyone Else</h2>
+    <h2 class="mt-4 mb-4 text-center">The Rest of the Bacon Family</h2>
     <div class="row justify-content-center mb-1">
       {% for member in singles %}
-        <div class="col-sm-12 col-md-4 col-xl-2 mb-4 justify-content-center text-center">
+        <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
           <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
           <h5>{{ member }}</h5>
           <p class="text-muted mb-0">{{ member.get_role_display }}</p>
@@ -44,6 +44,10 @@
             <p class="small text-muted mb-0">{{ member.subtitle }}</p>
           {% endif %}
         </div>
+
+        <!-- Stagger rows --->
+        {% if forloop.counter0 != 0 and forloop.counter|divisibleby:"7" %}
+          <div class="w-100 d-none d-xl-block"></div>{% endif %}
       {% endfor %}
     </div>
   </div>
