Consistent large head size across site

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -23,8 +23,8 @@
 
   <style>
     .head {
-      width: 3em;
-      height: 3em;
+      width: 150px;
+      height: 150px;
       object-fit: cover;
     }
 
