--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -9,9 +9,8 @@
       <div class="col-sm-12 col-md-6">
         <div class="text-center">
           <h3 class="mb-0">
-            <img class="rounded-circle mb-1"
-                 src="{{ member.get_avatar }}"
-                 style="width: 3em; height:3em; object-fit: cover;"><br>
+            <img class="head rounded-circle mb-1"
+                 src="{{ member.get_avatar }}"><br>
             {{ member.short_name }}
           </h3>
           {% if member.subtitle %}
