--- a/teammanager/templates/teammanager/directory.html
+++ b/teammanager/templates/teammanager/directory.html
@@ -11,7 +11,7 @@
           <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
             <a href="{% url 'man:member' id=position.member.id %}">
               <img class="head rounded-circle mb-3" src="{{ position.member.get_avatar }}">
-              <h5>{{ position.member }}</h5>
+              <h5 class="text-dark">{{ position.member }}</h5>
               <p class="small text-muted mb-0">{{ position.name }}</p>
             </a>
           </div>
