--- a/teammanager/templates/teammanager/families.html
+++ b/teammanager/templates/teammanager/families.html
@@ -11,7 +11,7 @@
           <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
             <a href="{% url 'man:member' id=member.id %}">
               <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
-              <h5>{{ member }}</h5>
+              <h5 class="text-dark">{{ member }}</h5>
               <p class="text-muted mb-0">{{ member.get_role_display }}</p>
               {% if member.subtitle %}
                 <p class="small text-muted mb-0">{{ member.subtitle }}</p>
@@ -27,7 +27,7 @@
       {% for member in singles %}
         <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
           <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
-          <h5>{{ member }}</h5>
+          <h5 class="text-dark">{{ member }}</h5>
           <p class="text-muted mb-0">{{ member.get_role_display }}</p>
           {% if member.subtitle %}
             <p class="small text-muted mb-0">{{ member.subtitle }}</p>
