--- a/teammanager/templates/teammanager/member_attendance.html
+++ b/teammanager/templates/teammanager/member_attendance.html
@@ -13,6 +13,7 @@
                  src="{{ member.get_avatar }}"><br>
             {{ member.short_name }}
           </h3>
+        <h5 class="text-muted">{{ member.get_role_display }}</h5>
           {% if member.subtitle %}
             <h5 class="text-muted">{{ member.subtitle }}</h5>
           {% endif %}
