--- a/teammanager/templates/teammanager/families.html
+++ b/teammanager/templates/teammanager/families.html
@@ -13,9 +13,6 @@
               <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
               <h5>{{ member }}</h5>
               <p class="text-muted mb-0">{{ member.get_role_display }}</p>
-              {% if member.subtitle %}
-                <p class="small text-muted mb-0">{{ member.subtitle }}</p>
-              {% endif %}
             </a>
           </div>
         {% endfor %}
@@ -26,12 +23,11 @@
     <div class="row justify-content-center mb-1">
       {% for member in singles %}
         <div class="col-sm-12 col-md-4 col-xl-3 mb-4 justify-content-center text-center">
-          <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
-          <h5>{{ member }}</h5>
-          <p class="text-muted mb-0">{{ member.get_role_display }}</p>
-          {% if member.subtitle %}
-            <p class="small text-muted mb-0">{{ member.subtitle }}</p>
-          {% endif %}
+          <a href="{% url 'man:member' id=member.id %}">
+            <img class="head rounded-circle mb-3" src="{{ member.get_avatar }}">
+            <h5>{{ member }}</h5>
+            <p class="text-muted mb-0">{{ member.get_role_display }}</p>
+          </a>
         </div>
 
         <!-- Stagger rows --->
