fix head sizes on profile

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -33,6 +33,12 @@
       height: 2em;
       object-fit: cover;
     }
+
+    .head-md {
+      width: 3em;
+      height: 3em;
+      object-fit: cover;
+    }
   </style>
   {% block script %}{% endblock %}
   {% block style %}{% endblock %}
