--- a/teammanager/templates/teammanager/index.html
+++ b/teammanager/templates/teammanager/index.html
@@ -15,8 +15,8 @@
           Use the links on the header to navigate the site.
         {% else %}
           <p>Please log in to access the site.
-            For non-team visitors, please visit us at
-            <a href="https://www.explodingbacon.com/">www.explodingbacon.com</a>. </p>
+   "403_client_error"         For non-team visitors, please visit us at
+            <a href="403_client_error""https://www.explodingbacon.com/">www.explodingbacon.com</a>. </p>
         {% endif %}
       </div>
       <iframe class="w-100" style="height: 500px;" frameborder="0"
