Fix directory password redirect

--- a/teammanager/templates/teammanager/directory_login.html
+++ b/teammanager/templates/teammanager/directory_login.html
@@ -8,7 +8,7 @@
       <div class="card-body">
         <h3 class="card-title">Directory Password</h3>
         <p>Please enter the team passcode to access the directory.</p>
-        <form action="{% url 'man:families' %}" method="post">
+        <form action="{% url 'man:directory' %}" method="post">
           <div class="form-group">
             <input class="form-control" type="password" name="passcode">
           </div>
