--- a/teammanager/templates/teammanager/meeting.html
+++ b/teammanager/templates/teammanager/meeting.html
@@ -33,7 +33,7 @@
           {% elif meeting.type == "out" %}
             signed up)
           {% endif %}
-          </span>
+          </i></span>
         </h3>
         <hr>
         <h5>Students</h5>
