--- a/teammanager/templates/teammanager/index.html
+++ b/teammanager/templates/teammanager/index.html
@@ -25,6 +25,7 @@
     <div class="col-sm-12 col-md-4 col-lg-3">
       <div class="text-center">
         <br>
+        <h3>Total Team Hours: {{ total_hours }}</h3>
         <h2>Hours Leaderboard:</h2>
         <br>
         {% for student in students %}
