--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -57,18 +57,20 @@
 
   <div class="collapse navbar-collapse" id="navItems">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'man:hours' %}">Hours</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'man:location' %}">Who's In?</a>
-      </li>
-      <li>
-        <a class="nav-link" href="{% url 'man:directory' %}">Directory</a>
-      </li>
-      <li>
-        <a class="nav-link" href="{% url 'man:families' %}">Families</a>
-      </li>
+      {% if request.user.is_authenticated or request.session.slack_auth %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'man:hours' %}">Hours</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'man:location' %}">Who's In?</a>
+        </li>
+        <li>
+          <a class="nav-link" href="{% url 'man:directory' %}">Directory</a>
+        </li>
+        <li>
+          <a class="nav-link" href="{% url 'man:families' %}">Families</a>
+        </li>
+      {% endif %}
       {% if request.user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'man:admin_add_photo' %}">Add Photos</a>
@@ -76,7 +78,7 @@
       {% endif %}
     </ul>
     <ul class="navbar-nav ml-auto">
-      {% if not request.user.is_authenticated %}
+      {% if not request.user.is_authenticated and not request.session.slack_oauth %}
         <li class="nav-item">
           <a class="nav-link" href="#" data-target="#login_modal" data-toggle="modal">Log In</a>
         </li>
@@ -127,21 +129,33 @@
   </div>
 </div>
 
-{% block modals %}
-{% endblock %}
-
-<main class="container-fluid" style="padding-top: 70px;">
-  {% block content %}
-    Hello World! Override me!
+{% if request.user.is_authenticated or request.session.slack_oauth %}
+  {% block modals %}
   {% endblock %}
-  <hr style="margin-top: 15px;">
-  <div class="footer container-fluid text-center" style="margin-bottom: 15px;">
-    <small>&copy;Dominic Canora & Ryan Shavell<br>
-      Made with &hearts;, available on <a href="https://github.com/FRC-1902/pigpen">GitHub</a>.
-    </small>
-    <br>
-  </div>
-</main>
+
+  <main class="container-fluid" style="padding-top: 70px;">
+    {% block content %}
+      Hello World! Override me!
+    {% endblock %}
+    <hr style="margin-top: 15px;">
+    <div class="footer container-fluid text-center" style="margin-bottom: 15px;">
+      <small>&copy;Dominic Canora & Ryan Shavell<br>
+        Made with &hearts;, available on <a href="https://github.com/FRC-1902/pigpen">GitHub</a>.
+      </small>
+      <br>
+    </div>
+  </main>
+{% else %}
+  <main class="container-fluid justify-content-center" style="padding-top: 70px">
+    <div class="justify-content-center align-content-center text-center mt-5">
+      <a href="https://slack.com/oauth/authorize?scope=identity.basic&client_id=5024182498.703454056853&redirect_uri=https%3A%2F%2Fpen.vegetarianbaconite.com%2Fauth%2Fslack%2Flogin">
+        <img alt="Sign in with Slack" height="40" width="172"
+             src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
+             srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"/>
+      </a>
+    </div>
+  </main>
+{% endif %}
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         crossorigin="anonymous"></script>
