--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -57,7 +57,7 @@
 
   <div class="collapse navbar-collapse" id="navItems">
     <ul class="navbar-nav">
-      {% if request.user.is_authenticated or request.session.slack_auth %}
+      {% if request.user.is_authenticated or request.session.slack_oauth %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'man:hours' %}">Hours</a>
         </li>
