use pigpen logo

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -47,7 +47,7 @@
 <!-- Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-light bg-primary fixed-top">
   <a class="navbar-brand" href="{% url 'man:index' %}">
-    <img src="{% static 'teammanager/pighead.png' %}" height=40 alt="Pig Head">
+    <img src="{% static 'teammanager/logo.png' %}" height=40 width=40 alt="Pig Head">
   </a>
 
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navItems"
