--- a/teammanager/templates/teammanager/clusters.html
+++ b/teammanager/templates/teammanager/clusters.html
@@ -20,7 +20,7 @@
       object-fit: cover;
     }
   </style>
-  <div class="container-fluid">
+  <div class="container">
     {% for group in groups %}
       <h2 class="mt-4 mb-4 text-center">{{ group.0 }}</h2>
       <div class="row justify-content-center mb-1">
