Update icon and add OG Bacon position

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -5,6 +5,7 @@
   {% load static %}
 
   <title>{% block title %}Pigpen{% endblock %}</title>
+  <link rel="icon" href="{% static 'teammanager/logo.png' %}">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
