Change URL to pen.explodingbacon.com

--- a/teammanager/templates/teammanager/base.html
+++ b/teammanager/templates/teammanager/base.html
@@ -149,7 +149,7 @@
 {% else %}
   <main class="container-fluid justify-content-center" style="padding-top: 70px">
     <div class="justify-content-center align-content-center text-center mt-5">
-      <a href="https://slack.com/oauth/authorize?scope=identity.basic&client_id=5024182498.703454056853&redirect_uri=https%3A%2F%2Fpen.vegetarianbaconite.com%2Fauth%2Fslack%2Flogin">
+      <a href="https://slack.com/oauth/authorize?scope=identity.basic&client_id=5024182498.703454056853&redirect_uri=https%3A%2F%2Fpen.explodingbacon.com%2Fauth%2Fslack%2Flogin">
         <img alt="Sign in with Slack" height="40" width="172"
              src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
              srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"/>
