Improve hour distinction and display

--- a/teammanager/templates/teammanager/meeting.html
+++ b/teammanager/templates/teammanager/meeting.html
@@ -32,6 +32,8 @@
             attended)
           {% elif meeting.type == "out" %}
             signed up)
+          {% else %}
+            attended)
           {% endif %}
           </i></span>
         </h3>
